--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 <html lang="en">
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<h1>OMG, it worked!</h1>
 	</head>
 	<body>
 		<Header title={SITE_TITLE} />
