hey, it's working now

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,11 +14,10 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 	<body>
 		<Header title={SITE_TITLE} />
 		<main>
-			<h1>🧑‍🚀 Hello, All!</h1>
+			<h1>🧑‍🚀 Hello, CloudFlare!</h1>
 			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
+				This is a just a blog starter template built with <a href="https://astro.build/">Astro</a>.
+				The point of all this is to work with the wrangler cli tool to fine hone the deployment adapter.
 			</p>
 			<p>
 				This template comes with a few integrations already configured in your
