--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import type { HTMLAttributes } from 'astro/types';
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
@@ -6,7 +7,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class:list={['astro-page']} {...{ 'data-astro-component': true } as HTMLAttributes<HTMLHtmlElement>}>
 	<head>
 		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
 		<h1>OMG, it worked!</h1>
@@ -19,20 +20,6 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 				This is a just a blog starter template built with <a href="https://astro.build/">Astro</a>.
 				The point of all this is to work with the wrangler cli tool to fine hone the deployment adapter.
 			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/pages/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
 
 		</main>
 		<Footer />
